# graph

./: .gitignore  AI_BOT_Testing  AI_BOT_Testing.xlsx  README.md  bo_kb_tree.mm  build_foundation.ipynb  build_graph.ipynb  build_tree_index.ipynb  business_operation_graph.txt  construct.ipynb  index_build_check.py  knowledge_graph_builder.py  optimization.ipynb  optimization.py  pyproject.toml  qa_generator.py  question_file_matcher_advanced.py  question_file_matches.json  question_file_matches_index.json  test_data.pkl  test_dev.py
contexual_docs/: APAC_Salesforce_Updates_Sharing_Sep_2024.txt  Account Creation Approval Process for Sales.txt  Account_Creation_Approval_Process_for_Sales.txt  Churn Definition.txt  FY25 APAC WW Compensation Plan, Presales (base version).txt  FY25 Compensation Related Business Metrics (APAC).txt  FY25 Net ARR Reference - For Sales Manager.txt  FY25 SKAKA Segmentation - Definition.txt  FY25 WW Compensation Plan, Sales (base version).txt  FY25_APAC_Compensation_Related_Business_Metrics_(APAC).txt  FY25_APAC_WW_Compensation_Plan,_Presales_(base_version).txt  FY25_Global_SPIFF_Program_-_MySQL_Family_Capture.txt  FY25_Global_SPIFF_Program_List.txt  FY25_Global_SPIFF_Program_for_SKA_and_KA_Focus_-_Customer_Testimony.txt  FY25_Global_SPIFF_Program_for_SKA_and_KA_Focus_-_Expansion.txt  FY25_SKA_and_KA_Segmentation_Definition.txt  FY25_WW_Compensation_Plan,_Sales_(base_version).txt  FY26 Business Ops Who to contact.txt  FY26 ICP Definition.txt  FY26 Net ARR Reference.txt  FY26 SKAKA Segmentation - Definition.txt  FY26_Business_Ops_Who_to_contact.txt  (+20 more)
(+99 files in other folders)
